fix: chat embeded not showing

--- a/src/components/channel/Channel.css
+++ b/src/components/channel/Channel.css
@@ -15,6 +15,10 @@
 .chat-container iframe {
   height: calc(100% - 50px);
   width: 100%;
+  transition: height 0.2s ease-in;
+}
+.chat-container iframe.hidden {
+  height: 0;
 }
 
 .channel-header {
